unpackaged/main/default/objects/Account/fields/FON_AsM_PM_Tiered_Annual_Dues__c.field-meta.xml
<CustomField>
    <fullName>FON_AsM_PM_Tiered_Annual_Dues__c</fullName>
    <formula>IF(Total_Deposits__c  &lt;= 500000000, &quot;$250&quot;,
IF(Total_Deposits__c  &gt;= 500000001 &amp;&amp; Total_Deposits__c  &lt;= 1000000000, &quot;$750&quot;,
IF(Total_Deposits__c  &gt;= 1000000001 &amp;&amp; Total_Deposits__c  &lt;= 5000000000, &quot;$2,000&quot;,
IF(Total_Deposits__c  &gt;= 5000000001 &amp;&amp; Total_Deposits__c &lt;= 20000000000, &quot;$7,000&quot;,
IF(Total_Deposits__c  &gt;= 20000000001 &amp;&amp; Total_Deposits__c &lt;= 60000000000, &quot;$20,000&quot;,
IF(Total_Deposits__c  &gt;= 60000000001 &amp;&amp; Total_Deposits__c  &lt;= 100000000000, &quot;$40,000&quot;,
IF(Total_Deposits__c  &gt;= 100000000001 &amp;&amp; Total_Deposits__c  &lt;= 150000000000, &quot;$75,000&quot;,
IF(Total_Deposits__c  &gt;= 150000000001 &amp;&amp; Total_Deposits__c  &lt;= 200000000000,&quot;$100,000&quot;,
IF(Total_Deposits__c  &gt;= 200000000001, &quot;$120,000&quot;, null
)))))))))</formula>
    <label>AsM/PM Tiered Annual Dues</label>
    <type>Text</type>
</CustomField>