unpackaged/main/default/objects/Account/fields/FON_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>FON_Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Item Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>