unpackaged/main/default/objects/Account/fields/FON_Charter_Number__c.field-meta.xml
<CustomField>
    <fullName>FON_Charter_Number__c</fullName>
    <label>Charter Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>