unpackaged/main/default/objects/Account/fields/FON_Current_User_Can_Search__c.field-meta.xml
<CustomField>
    <fullName>FON_Current_User_Can_Search__c</fullName>
    <formula>$User.Account_Public_Adj_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Can Search</label>
    <type>Checkbox</type>
</CustomField>