unpackaged/main/default/objects/Account/fields/FON_Fixed_Annual_Dues_PPM_Calculation__c.field-meta.xml
<CustomField>
    <fullName>FON_Fixed_Annual_Dues_PPM_Calculation__c</fullName>
    <formula>IF(Total_Deposits__c * ( FON_Fixed_Rate_Parts_per_Million__c) &lt; 19000,19000,
IF(Total_Deposits__c * ( FON_Fixed_Rate_Parts_per_Million__c) &gt; 120750,120750,
Total_Deposits__c * ( FON_Fixed_Rate_Parts_per_Million__c)
)
)</formula>
    <label>Full Member Dues (PPM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>