unpackaged/main/default/objects/Account/fields/FON_Fixed_Rate__c.field-meta.xml
<CustomField>
    <fullName>FON_Fixed_Rate__c</fullName>
    <inlineHelpText>This field will be populated via a data load whenever the value chnges</inlineHelpText>
    <label>Fixed Rate by Volume</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>