unpackaged/main/default/objects/Account/fields/FON_Fixed_Rate_Parts_per_Million__c.field-meta.xml
<CustomField>
    <fullName>FON_Fixed_Rate_Parts_per_Million__c</fullName>
    <defaultValue>0.0000011932</defaultValue>
    <label>Fixed Rate Parts per Million</label>
    <precision>11</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>