unpackaged/main/default/objects/Account/fields/FON_Hours_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>FON_Hours_of_Operation__c</fullName>
    <inlineHelpText>Hours of Operation for an Account. The first 7 lines will be visible</inlineHelpText>
    <label>Hours of Operation</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>