unpackaged/main/default/objects/Account/fields/FON_Invoice_Timing__c.field-meta.xml
<CustomField>
    <fullName>FON_Invoice_Timing__c</fullName>
    <inlineHelpText>Select the invoice timing this Account will be billed for. Information populates on the Sales Order record.</inlineHelpText>
    <label>Invoice Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>