unpackaged/main/default/objects/Account/fields/FON_Is_Member__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>*System Generated* Identifies whether an Account is a Member or Not a Member. Default is unchecked</inlineHelpText>
    <label>Is Member?</label>
    <type>Checkbox</type>
</CustomField>