unpackaged/main/default/objects/Account/fields/FON_Is_Sponsored_Organization__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Sponsored_Organization__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>*System Generated* Identifies an Account as being a Sponsoring Organization aka a Parent Account. Default is unchecked.</inlineHelpText>
    <label>Is Parent Organization?</label>
    <type>Checkbox</type>
</CustomField>