unpackaged/main/default/objects/Account/fields/FON_Is_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Subsidiary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manually check the box if the Account record is a known subsidiary of another Account. Default is unchecked.</inlineHelpText>
    <label>Is Subsidiary?</label>
    <type>Checkbox</type>
</CustomField>