unpackaged/main/default/objects/Account/fields/FON_Original_Member_Join_Date__c.field-meta.xml
<CustomField>
    <fullName>FON_Original_Member_Join_Date__c</fullName>
    <inlineHelpText>*System Generated* Populates the Date the Member Account first joined ECCHO. If Null, Account has never been an ECCHO  Member.</inlineHelpText>
    <label>Original Member Join Date</label>
    <type>Date</type>
</CustomField>