unpackaged/main/default/objects/Account/fields/FON_Parent_Type_is_Licensing_Org__c.field-meta.xml
<CustomField>
    <fullName>FON_Parent_Type_is_Licensing_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, indicates this Account is a Licensing Organization. Default is Unchecked.</inlineHelpText>
    <label>Parent Type is Licensing Org</label>
    <type>Checkbox</type>
</CustomField>