unpackaged/main/default/objects/Account/fields/FON_Partner_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>FON_Partner_Provider_ID__c</fullName>
    <label>NCP Partner/Provider ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>