unpackaged/main/default/objects/Account/fields/FON_Primary_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>FON_Primary_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When populated, checks a box on the Contact Record identifying the Contact as the Primary Billing Contact. Can only have one Primary Billing Contact at a time.</description>
    <inlineHelpText>When populated, checks a box on the Contact Record identifying the Contact as the Primary Billing Contact. Can only have one Primary Billing Contact at a time.</inlineHelpText>
    <label>Primary Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary Billing Contact)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>