unpackaged/main/default/objects/Account/fields/FON_Primary_R_T_Number__c.field-meta.xml
<CustomField>
    <fullName>FON_Primary_R_T_Number__c</fullName>
    <formula>Primary_R_T_Number__c</formula>
    <inlineHelpText>Formula field that populates the Primary R/T Number specifically for Directories view</inlineHelpText>
    <label>Primary RTN for Directory</label>
    <type>Text</type>
</CustomField>