unpackaged/main/default/objects/Account/fields/FON_Timezone__c.field-meta.xml
<CustomField>
    <fullName>FON_Timezone__c</fullName>
    <inlineHelpText>List of world timezones</inlineHelpText>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ET</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>(GMT) Casablanca, Monrovia</fullName>
                <isActive>false</isActive>
                <label>(GMT) Casablanca, Monrovia</label>
            </value>
            <value>
                <fullName>(GMT) Greenwich Mean Time: Dublin, Edinburgh, Lisbon, London</fullName>
                <isActive>false</isActive>
                <label>(GMT) Greenwich Mean Time: Dublin, Edinburgh, Lisbon, London</label>
            </value>
            <value>
                <fullName>(GMT+01:00) Amsterdam, Berlin, Bern, Rome, Stockholm, Vienna</fullName>
                <isActive>false</isActive>
                <label>(GMT+01:00) Amsterdam, Berlin, Bern, Rome, Stockholm, Vienna</label>
            </value>
            <value>
                <fullName>(GMT+01:00) Belgrade, Bratislava, Budapest, Ljubljana, Prague</fullName>
                <isActive>false</isActive>
                <label>(GMT+01:00) Belgrade, Bratislava, Budapest, Ljubljana, Prague</label>
            </value>
            <value>
                <fullName>(GMT+01:00) Brussels, Copenhagen, Madrid, Paris</fullName>
                <isActive>false</isActive>
                <label>(GMT+01:00) Brussels, Copenhagen, Madrid, Paris</label>
            </value>
            <value>
                <fullName>(GMT+01:00) Sarajevo, Skopje, Warsaw, Zagreb</fullName>
                <isActive>false</isActive>
                <label>(GMT+01:00) Sarajevo, Skopje, Warsaw, Zagreb</label>
            </value>
            <value>
                <fullName>(GMT+01:00) West Central Africa</fullName>
                <isActive>false</isActive>
                <label>(GMT+01:00) West Central Africa</label>
            </value>
            <value>
                <fullName>(GMT+02:00) Athens, Istanbul, Minsk</fullName>
                <isActive>false</isActive>
                <label>(GMT+02:00) Athens, Istanbul, Minsk</label>
            </value>
            <value>
                <fullName>(GMT+02:00) Bucharest</fullName>
                <isActive>false</isActive>
                <label>(GMT+02:00) Bucharest</label>
            </value>
            <value>
                <fullName>(GMT+02:00) Cairo</fullName>
                <isActive>false</isActive>
                <label>(GMT+02:00) Cairo</label>
            </value>
            <value>
                <fullName>(GMT+02:00) Harare, Pretoria</fullName>
                <isActive>false</isActive>
                <label>(GMT+02:00) Harare, Pretoria</label>
            </value>
            <value>
                <fullName>(GMT+02:00) Helsinki, Kiev, Riga, Sofia, Tallinn, Vilnius</fullName>
                <isActive>false</isActive>
                <label>(GMT+02:00) Helsinki, Kiev, Riga, Sofia, Tallinn, Vilnius</label>
            </value>
            <value>
                <fullName>(GMT+02:00) Jerusalem</fullName>
                <isActive>false</isActive>
                <label>(GMT+02:00) Jerusalem</label>
            </value>
            <value>
                <fullName>(GMT+03:00) Baghdad</fullName>
                <isActive>false</isActive>
                <label>(GMT+03:00) Baghdad</label>
            </value>
            <value>
                <fullName>(GMT+03:00) Kuwait, Riyadh</fullName>
                <isActive>false</isActive>
                <label>(GMT+03:00) Kuwait, Riyadh</label>
            </value>
            <value>
                <fullName>(GMT+03:00) Moscow, St. Petersburg, Volgograd</fullName>
                <isActive>false</isActive>
                <label>(GMT+03:00) Moscow, St. Petersburg, Volgograd</label>
            </value>
            <value>
                <fullName>(GMT+03:00) Nairobi</fullName>
                <isActive>false</isActive>
                <label>(GMT+03:00) Nairobi</label>
            </value>
            <value>
                <fullName>(GMT+03:30) Tehran</fullName>
                <isActive>false</isActive>
                <label>(GMT+03:30) Tehran</label>
            </value>
            <value>
                <fullName>(GMT+04:00) Abu Dhabi, Muscat</fullName>
                <isActive>false</isActive>
                <label>(GMT+04:00) Abu Dhabi, Muscat</label>
            </value>
            <value>
                <fullName>(GMT+04:00) Baku, Tbilisi, Yerevan</fullName>
                <isActive>false</isActive>
                <label>(GMT+04:00) Baku, Tbilisi, Yerevan</label>
            </value>
            <value>
                <fullName>(GMT+04:30) Kabul</fullName>
                <isActive>false</isActive>
                <label>(GMT+04:30) Kabul</label>
            </value>
            <value>
                <fullName>(GMT+05:00) Ekaterinburg</fullName>
                <isActive>false</isActive>
                <label>(GMT+05:00) Ekaterinburg</label>
            </value>
            <value>
                <fullName>(GMT+05:00) Islamabad, Karachi, Tashkent</fullName>
                <isActive>false</isActive>
                <label>(GMT+05:00) Islamabad, Karachi, Tashkent</label>
            </value>
            <value>
                <fullName>(GMT+05:30) Chennai, Kolkata, Mumbai, New Delhi</fullName>
                <isActive>false</isActive>
                <label>(GMT+05:30) Chennai, Kolkata, Mumbai, New Delhi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>