unpackaged/main/default/objects/Account/fields/FON_Total_Deposits_Rollup__c.field-meta.xml
<CustomField>
    <fullName>FON_Total_Deposits_Rollup__c</fullName>
    <inlineHelpText>Pulls the total deposit information from the most recent acuity upload.</inlineHelpText>
    <label>Total Deposits | Rollup</label>
    <summarizedField>Deposit_Based_Upload_Information__c.Total_Deposits__c</summarizedField>
    <summaryForeignKey>Deposit_Based_Upload_Information__c.Account_Name__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>