unpackaged/main/default/objects/Account/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <formula>IF(OR(NOT(ISBLANK(TEXT(  Membership_Expiration__c  ))),  Is_Licensing_Organization__c ,  Is_Sponsoring_Organization__c ), &quot;Your Company is Active&quot;, &quot;Your Company is Not Active&quot;)</formula>
    <label>Formula</label>
    <type>Text</type>
</CustomField>