unpackaged/main/default/objects/Account/fields/GDO_Data_Region__c.field-meta.xml
<CustomField>
    <fullName>GDO_Data_Region__c</fullName>
    <description>Classifies the account record as a &quot;US&quot; or &quot;EMEA&quot; record for the purposes of reporting on the demo data set.</description>
    <inlineHelpText>Classifies the account record as a &quot;US&quot; or &quot;EMEA&quot; record for the purposes of reporting on the demo data set.</inlineHelpText>
    <label>GDO Data Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>