unpackaged/main/default/objects/Account/fields/GDO_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>GDO_Data_Type__c</fullName>
    <description>Classifies the account record as a &quot;Company&quot; or &quot;Individual&quot; for the purposes of reporting on the demo data set.</description>
    <inlineHelpText>Classifies the account record as a &quot;Company&quot; or &quot;Individual&quot; for the purposes of reporting on the demo data set.</inlineHelpText>
    <label>GDO Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>