unpackaged/main/default/objects/Account/fields/General_Adj_List_Email__c.field-meta.xml
<CustomField>
    <fullName>General_Adj_List_Email__c</fullName>
    <description>General_Adj_List_Email</description>
    <label>Email Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>