unpackaged/main/default/objects/Account/fields/General_Adj_List_Fax__c.field-meta.xml
<CustomField>
    <fullName>General_Adj_List_Fax__c</fullName>
    <description>General_Adj_List_Fax</description>
    <label>Fax Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>