unpackaged/main/default/objects/Account/fields/General_Adj_List_Hr_Op__c.field-meta.xml
<CustomField>
    <fullName>General_Adj_List_Hr_Op__c</fullName>
    <description>General_Adj_List_Hr_Op</description>
    <label>Hours of Operation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>