unpackaged/main/default/objects/Account/fields/General_Adj_List_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Adj_List_Notes__c</fullName>
    <description>General_Adj_List_Notes</description>
    <inlineHelpText>Appears in the Exceptions Contact Directory</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>