unpackaged/main/default/objects/Account/fields/General_Adj_List_Phone__c.field-meta.xml
<CustomField>
    <fullName>General_Adj_List_Phone__c</fullName>
    <description>General_Adj_List_Phone</description>
    <label>Phone Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>