unpackaged/main/default/objects/Account/fields/General_Adj_List_TZ__c.field-meta.xml
<CustomField>
    <fullName>General_Adj_List_TZ__c</fullName>
    <description>General_Adj_List_TZ</description>
    <label>Timezone</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>