unpackaged/main/default/objects/Account/fields/In_Production__c.field-meta.xml
<CustomField>
    <fullName>In_Production__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Production Status of FI</description>
    <label>In Production</label>
    <type>Checkbox</type>
</CustomField>