unpackaged/main/default/objects/Account/fields/Is_500MM_5B__c.field-meta.xml
<CustomField>
    <fullName>Is_500MM_5B__c</fullName>
    <formula>IF(Total_Deposits__c &gt;= 500000000 &amp;&amp; Total_Deposits__c &lt;= 5000000000, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is $500MM - $5B</label>
    <type>Checkbox</type>
</CustomField>