unpackaged/main/default/objects/Account/fields/Is_Education_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Is_Education_Subscriber__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account is EduSub</description>
    <label>Is Education Subscriber</label>
    <type>Checkbox</type>
</CustomField>