unpackaged/main/default/objects/Account/fields/Is_Less_Than_500MM__c.field-meta.xml
<CustomField>
    <fullName>Is_Less_Than_500MM__c</fullName>
    <formula>IF(Total_Deposits__c &lt; 500000000, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Less Than $500MM</label>
    <type>Checkbox</type>
</CustomField>