unpackaged/main/default/objects/Account/fields/Is_Licensing_Organization__c.field-meta.xml
<CustomField>
    <fullName>Is_Licensing_Organization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Licensing Organization</label>
    <type>Checkbox</type>
</CustomField>