unpackaged/main/default/objects/Account/fields/Is_More_Than_5B__c.field-meta.xml
<CustomField>
    <fullName>Is_More_Than_5B__c</fullName>
    <formula>IF(Total_Deposits__c &gt; 5000000000 &amp;&amp; Total_Deposits__c &lt;= 20000000000,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is More Than $5B</label>
    <type>Checkbox</type>
</CustomField>