unpackaged/main/default/objects/Account/fields/Is_Sponsoring_Organization__c.field-meta.xml
<CustomField>
    <fullName>Is_Sponsoring_Organization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sponsoring Organization</label>
    <type>Checkbox</type>
</CustomField>