unpackaged/main/default/objects/Account/fields/Legacy_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Account ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>