unpackaged/main/default/objects/Account/fields/Legacy_Item_Based_Billing_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Item_Based_Billing_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Item-Based Billing Conversion</label>
    <type>Checkbox</type>
</CustomField>