unpackaged/main/default/objects/Account/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>BillingStreet &amp;&#39;&lt;br&gt;&#39;&amp;
BillingCity &amp;&#39;, &#39;&amp; TEXT(BillingStateCode) &amp;&#39; &#39;&amp; BillingPostalCode &amp;&#39;&lt;br&gt;&#39;&amp;
TEXT(BillingCountryCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>