unpackaged/main/default/objects/Account/fields/Member_Acceptance_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Member_Acceptance_Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Resend member acceptance email notification.</description>
    <label>Member Acceptance Email Notification</label>
    <type>Checkbox</type>
</CustomField>