unpackaged/main/default/objects/Account/fields/Membership_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Membership_Expiration__c</fullName>
    <label>Membership Expiration</label>
    <type>Date</type>
</CustomField>