unpackaged/main/default/objects/Account/fields/Membership_Types__c.field-meta.xml
<CustomField>
    <fullName>Membership_Types__c</fullName>
    <label>Membership Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FON_Associate Membership</fullName>
            </value>
            <value>
                <fullName>FON_Company Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>