unpackaged/main/default/objects/Account/fields/Notify_Via_Email__c.field-meta.xml
<CustomField>
    <fullName>Notify_Via_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notify via email that this organization has been modified.</description>
    <label>Notify via email</label>
    <type>Checkbox</type>
</CustomField>