unpackaged/main/default/objects/Account/fields/OrderApi__Account_Email__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account_Email__c</fullName>
    <description>The default/primary email for the account.</description>
    <inlineHelpText>The default/primary email for the account.</inlineHelpText>
    <label>Account Email</label>
    <type>Email</type>
</CustomField>