unpackaged/main/default/objects/Account/fields/OrderApi__Annual_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Annual_Engagement_Score__c</fullName>
    <description>Aggregates the Account&#39;s active engagement scores from it&#39;s badge records for the current year.</description>
    <inlineHelpText>Aggregates the Account&#39;s active engagement scores from it&#39;s badge records for the current year.</inlineHelpText>
    <label>Annual Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>