unpackaged/main/default/objects/Account/fields/OrderApi__Disable_Badge_Flow_down__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Disable_Badge_Flow_down__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this field disables any inheritance of flow-down badges from the parent account.</description>
    <inlineHelpText>When checked, this field disables any inheritance of flow-down badges from the parent account.</inlineHelpText>
    <label>Disable Badge Flow-down</label>
    <type>Checkbox</type>
</CustomField>