unpackaged/main/default/objects/Account/fields/OrderApi__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Primary Contact for the Account will auto-populate on all Account Transactions, Payments, etc... by default.</description>
    <inlineHelpText>The Primary Contact for the Account will auto-populate on all Account Transactions, Payments, etc... by default.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Primary Contact Accounts</relationshipLabel>
    <relationshipName>Primary_Contact_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>