unpackaged/main/default/objects/Account/fields/OrderApi__Privacy_Settings__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Privacy_Settings__c</fullName>
    <description>**Defaults to private** This field sets the visibility settings when account search is enabled.
            Public: Any user in the system can search. Private: Searchable by authenticated users only. Unlisted: Can not be searched at all.</description>
    <inlineHelpText>**Defaults to private** This field sets the visibility settings when account search is enabled.
            Public: Any user in the system can search. Private: Searchable by authenticated users only. Unlisted: Can not be searched at all.</inlineHelpText>
    <label>Privacy Settings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>public</fullName>
            </value>
            <value>
                <fullName>private</fullName>
                <default>true</default>
                <label>private</label>
            </value>
            <value>
                <fullName>unlisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>