unpackaged/main/default/objects/Account/fields/OrderApi__Restrict_Assignment_Visibility__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Restrict_Assignment_Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field restricts a contacts ability to see other contacts related to this account when purchasing items that have assignments enabled.</description>
    <inlineHelpText>This field restricts a contacts ability to see other contacts related to this account when purchasing items that have assignments enabled.</inlineHelpText>
    <label>Restrict Assignment Visibility</label>
    <type>Checkbox</type>
</CustomField>