unpackaged/main/default/objects/Account/fields/Organization_URL__c.field-meta.xml
<CustomField>
    <fullName>Organization_URL__c</fullName>
    <label>Organization URL</label>
    <type>Url</type>
</CustomField>