unpackaged/main/default/objects/Account/fields/Original_Billing_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Original_Billing_Quarter__c</fullName>
    <description>Prior to the 2025 billing quarter conversion, this was the original FI’s billing quarter.</description>
    <inlineHelpText>Prior to the 2025 billing quarter conversion, this was the original FI’s billing quarter.</inlineHelpText>
    <label>Original Billing Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2Q</fullName>
            </value>
            <value>
                <fullName>3Q</fullName>
            </value>
            <value>
                <fullName>4Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>