unpackaged/main/default/objects/Account/fields/Override_Annual_Dues__c.field-meta.xml
<CustomField>
    <fullName>Override_Annual_Dues__c</fullName>
    <description>This is the alternative annual dues amount if &quot;override&quot; is checked.</description>
    <inlineHelpText>This is the alternative annual dues amount if &quot;override&quot; is checked.</inlineHelpText>
    <label>Override Annual Dues</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$5.00</fullName>
            </value>
            <value>
                <fullName>$15.00</fullName>
            </value>
            <value>
                <fullName>$25.00</fullName>
            </value>
            <value>
                <fullName>$30.00</fullName>
            </value>
            <value>
                <fullName>$31.25</fullName>
            </value>
            <value>
                <fullName>$40.00</fullName>
            </value>
            <value>
                <fullName>$50.00</fullName>
            </value>
            <value>
                <fullName>$60.00</fullName>
            </value>
            <value>
                <fullName>$70.00</fullName>
            </value>
            <value>
                <fullName>$74.35</fullName>
            </value>
            <value>
                <fullName>$74.36</fullName>
            </value>
            <value>
                <fullName>$75.00</fullName>
            </value>
            <value>
                <fullName>$78.94</fullName>
            </value>
            <value>
                <fullName>$78.95</fullName>
            </value>
            <value>
                <fullName>$80.00</fullName>
            </value>
            <value>
                <fullName>$90.00</fullName>
            </value>
            <value>
                <fullName>$100.00</fullName>
            </value>
            <value>
                <fullName>$110.00</fullName>
            </value>
            <value>
                <fullName>$120.00</fullName>
            </value>
            <value>
                <fullName>$130.00</fullName>
            </value>
            <value>
                <fullName>$140.00</fullName>
            </value>
            <value>
                <fullName>$150.00</fullName>
            </value>
            <value>
                <fullName>$160.00</fullName>
            </value>
            <value>
                <fullName>$170.00</fullName>
            </value>
            <value>
                <fullName>$190.00</fullName>
            </value>
            <value>
                <fullName>$200.00</fullName>
            </value>
            <value>
                <fullName>$220.00</fullName>
            </value>
            <value>
                <fullName>$240.00</fullName>
            </value>
            <value>
                <fullName>$250.00</fullName>
            </value>
            <value>
                <fullName>$260.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>