unpackaged/main/default/objects/Account/fields/Override_applied_to_which_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Override_applied_to_which_Sponsor__c</fullName>
    <inlineHelpText>In the case of a duplicate relationship, this sponsor owns the override price</inlineHelpText>
    <label>Override applied to which Sponsor</label>
    <type>TextArea</type>
</CustomField>